<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">嘻生活</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="version_name">1.0.1</string>

    <string name="home">Go home</string>
    <string name="new_fragment">Add new</string>
    <string name="delete_fragment">Pop top</string>
    
    <string name="phone_hint">手机号码</string>
    <string name="register_phone_hit">请输入您的手机号码</string>
    <string name="pwd_hint">密码(6&#8211;15位字符，可由英文、数字或字符组成)</string>
    <string name="pwd_change_hint">请填入新密码(6&#8211;15位字符，可由英文、数字或字符组成)</string>
    <string name="register_pwd_hint">请设置您的密码</string>
    <string name="pwd_new_hint">请输入新密码</string>
    <string name="pwd_new_again_hint">请再次输入密码</string>
    <string name="sms_verifycode_hint">短信验证码</string>
    
    <string name="get_sms_verifycode">获取短信验证码</string>
    <string name="quick_register"><u>快速注册</u></string>
    <string name="forget_pwd"><u>忘记密码?</u></string>
    <string name="login">登      录</string>
    <string name="submit">提       交</string>
    <string name="user_login">用户登录</string>
    <string name="user_logout">注销登录</string>
    <string name="btn_confirm">确     定</string>
    <string name="register">注册</string>
    
    <string name="read_me">我已阅读并接受《嘻生活服务协议》</string>
    
    <string name="notnull">不能为空</string>
    <string name="user_phonenum_notnull">手机号不能为空</string>
    <string name="user_phonenum_verify">手机号格式不正确</string>
	<string name="user_pwd_notnull">密码不能为空</string>
	<string name="user_pwd_verify">6&#8211;15位字符，可由英文、数字或字符组成</string>
	
	<string name="common_loading">加载中</string>
	
	<string name="nickname_null">请完善您的个人资料</string>
	<string name="adress_null">地址暂未设</string>
    
    
    <!-- ids -->
    <string name="main_content" type="id" />
    <string name="real_content" type="id"/>
    <string name="slide_view" type="id"/>
	<string name="item_pos" type="id"/>
    
    <!-- 临时数据 -->
    <string name="temp1">订单金额  : <font color='#ff0099'>￥3600.00</font></string>
    
    <string name="prompt_loading">加载中</string>
    <string name="prompt_nologin">未登录！</string>
    <string name="prompt_empty">无数据！</string>
    <string name="prompt_retry">获取失败,请重试！</string>
    <string name="prompt_error">很抱歉，无法获取数据!</string>
    <!-- 支付宝 -->
    <string name="confirm_title">提示</string>
    <string name="ensure">确定</string>
    <string name="cancel">取消</string>
    <string name="processing">加载中</string>
    
    <string name="apk_name_prefix">XiLife_</string>
    
</resources>
