<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@string/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    android:orientation="vertical" >

    <include
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/common_topbar" />

    <RelativeLayout
        android:id="@string/real_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:background="@drawable/grey_bg"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="20dp" >

            <EditText
                android:id="@+id/act_changepwd_newpwd"
                style="@style/Common_EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pwd_new_hint"
                android:imeOptions="actionNext"
                android:inputType="textPassword" />
            
            <EditText
                android:layout_marginTop="30dp"
                android:id="@+id/act_changepwd_newpwd2"
                style="@style/Common_EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pwd_new_again_hint"
                android:imeOptions="actionNext"
                android:inputType="textPassword" />
            
             <Button
                style="@style/Common_Button.Blue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginTop="30dp"
                android:text="@string/btn_confirm" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>