<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:makeramen="http://schemas.android.com/apk/res-auto"
    android:id="@string/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/black" >

    <include
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/common_topbar" />

    <RelativeLayout
        android:id="@string/real_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_bg" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/grey_bg"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="20dp"
            android:paddingBottom="30dp" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:text="头    像 :" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp" >

                    <com.zhongjie.view.RoundedImageView
                        android:id="@+id/act_userinfo_head"
                        android:layout_width="@dimen/usercenter_head_width"
                        android:layout_height="@dimen/usercenter_head_height"
                        makeramen:corner_radius="50dp"
                        makeramen:pressdown_shade="true"
                        makeramen:round_background="true" 
                        android:src="@drawable/ic_default_head"/>

                    <ImageView
                        android:id="@+id/act_userinfo_edit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignRight="@+id/act_userinfo_head"
                        android:layout_alignTop="@+id/act_userinfo_head"
                        android:scaleType="center"
                        android:src="@drawable/ic_head_edit"
                        android:visibility="gone" />
                </RelativeLayout>
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_height"
                android:layout_marginTop="10dp"
                android:background="#aabbcc" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_height"
                android:layout_marginBottom="10dp"
                android:background="#ffffff" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="昵    称 :"
                    android:textColor="@android:color/black" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp" >

                    <TextView
                        android:id="@+id/act_userinfo_nickname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nickname_null"
                        android:textColor="@android:color/black" 
                        android:inputType="text"
                        android:imeOptions="actionNext"/>

                    <EditText
                        android:id="@+id/act_userinfo_editnickname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/white_bg"
                        android:padding="5dp"
                        android:visibility="gone" />
                </RelativeLayout>
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_height"
                android:layout_marginTop="10dp"
                android:background="#aabbcc" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_height"
                android:layout_marginBottom="10dp"
                android:background="#ffffff" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="手    机 :" 
                    android:textColor="@android:color/black"/>

                <TextView
                    android:id="@+id/act_userinfo_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text=""
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_height"
                android:layout_marginTop="10dp"
                android:background="#aabbcc" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_height"
                android:layout_marginBottom="10dp"
                android:background="#ffffff" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="房    号 :" 
                    android:textColor="@android:color/black"/>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp" >

                    <TextView
                        android:id="@+id/act_userinfo_address1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0" 
                        android:textColor="@android:color/black"/>

                    <EditText
                        android:id="@+id/act_userinfo_editaddress1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minWidth="50dp"
                        android:layout_marginRight="5dp"
                        android:background="@drawable/white_bg"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:padding="5dp"
                        android:visibility="gone" />
                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="栋" 
                    android:textColor="@android:color/black"/>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/act_userinfo_address2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0" 
                        android:textColor="@android:color/black"/>

                    <EditText
                        android:id="@+id/act_userinfo_editaddress2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minWidth="50dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:background="@drawable/white_bg"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:padding="5dp"
                        android:visibility="gone" />
                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="室" 
                    android:textColor="@android:color/black"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/act_userinfo_confirmLL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="20dp"
                android:visibility="gone" >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/line_height"
                    android:layout_marginTop="10dp"
                    android:background="#aabbcc" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/line_height"
                    android:layout_marginBottom="10dp"
                    android:background="#ffffff" />
                <Button 
                    android:id="@+id/act_userinfo_submit"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Common_Button.Blue"
                    android:text="@string/submit"/>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>